force-app/main/default/objects/ssot__OpportunityInfluence__dlm/fields/ssot__PublicationId__c.field-meta.xml
<CustomField>
    <fullName>ssot__PublicationId__c</fullName>
    <label>Publication</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PublicationId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>