force-app/main/default/objects/ssot__OpportunityInfluence__dlm/fields/ssot__PublicationObject__c.field-meta.xml
<CustomField>
    <fullName>ssot__PublicationObject__c</fullName>
    <label>Publication Object</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PublicationObject</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>