force-app/main/default/objects/ssot__OpportunityInfluence__dlm/fields/ssot__rel_1718545877914_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1718545877914_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OpportunityInfluence_OpportunityId_m_rel</label>
    <referenceTo>ssot__Opportunity__dlm</referenceTo>
    <relationshipLabel>OpportunityInfluence_OpportunityId_m_rel</relationshipLabel>
    <relationshipName>rel_1718545877914_end</relationshipName>
    <type>Lookup</type>
</CustomField>