force-app/main/default/objects/ssot__OpportunityInfluence__dlm/fields/ssot__RevenueShareAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__RevenueShareAmount__c</fullName>
    <label>Revenue Share Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RevenueShareAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>